# tahuti

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  LICENSE.txt  README.md  build-ui.sh  build.mjs  deploy.sh  esbuild.dev.mjs  esbuild.prod.mjs  inbox.md  package-lock.json  package.json  peru.yaml  proposal.md  pyproject.toml  requirements.txt  run.sh  sync.sh  todo.md
docs/: architecture.md  deployment.md  development.md  faq.md
lib/: splt-exps.hoon
scripts/: tahuti.py  utils.py
splt-exps/lib/: bfs.hoon  edmonds-karp.hoon  graph.hoon  helper.hoon  tahuti.hoon
splt-exps/sur/: tahuti.hoon
tahuti/: desk.bill  desk.docket-0
tahuti/app/: tahuti-api.hoon  tahuti-ui.hoon  tahuti-ui.html  tahuti-watcher.hoon  tahuti.hoon
tahuti/lib/: bfs.hoon  edmonds-karp.hoon  graph.hoon  json-reparser.hoon  schooner.hoon  stat.hoon  tahuti.hoon  test-json.hoon
tahuti/sur/: expense.hoon  graph.hoon  tahuti.hoon
tahuti/tests/: fixtures.hoon  stat.hoon
tests/: conftest.py  pyproject.toml  test_balances.py  test_expenses.py  test_groups.py  test_invitees.py  test_join.py  test_kick.py  test_members.py  test_reimbursements.py  test_root.py  test_tahuti.py  test_tahuti_api.py  utils.py
tests/property/: test_balances.py  test_expenses.py  test_groups.py  test_reimbursements.py
tests/unit/: test_balances.py  test_currencies.py  test_expenses.py  test_groups.py  test_invitees.py  test_join.py  test_kick.py  test_leave.py  test_members.py  test_reimbursements.py
ui/: README.md  build.mjs  manifest.json  package-lock.json  package.json
ui/css/: class.css  footer.css  form.css  header.css  print.css  responsive.css  style.css  table.css  tables.css  typography.css  udjat.css
ui/html/: about.html  add.html  balances.html  create.html  details.html  (+10 more)
(+85 files in other folders)
