[tool.poetry]
name = "tahuti"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.0"
requests = "^2.31.0"
schema = "^0.7.5"
hypothesis = "^6.97.5"
ruff = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
